Fix bug in pagination control spacing (#33)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1077,3 +1077,8 @@ $pre-scrollable-max-height:         340px !default;
 // Printing
 $print-page-size:                   a3 !default;
 $print-body-min-width:              map-get($grid-breakpoints, "lg") !default;
+
+// Pagination
+
+$pagination-icon-font-size: $font-size-base * 1.5;
+$pagination-text-margin-right: $grid-gutter-width / 2;
